Replace deprecated new URL constructors in appserver common, appclient, webservices, deployment
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>