@@ -49,6 +49,7 @@ import jakarta.inject.Inject;
 import jakarta.inject.Named;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.text.MessageFormat;
 import java.util.ArrayList;
@@ -440,9 +441,9 @@ public class ResourceValidator implements EventListener, ResourceValidatorVisito
                 if (jndiName != null && !jndiName.hasJavaPrefix()) {
                     try {
                         // for jndi-name like "http://localhost:8080/index.html"
-                        new URL(jndiName.toString());
+                        URI.create(jndiName.toString()).toURL();
                         resRefResource.noValidation();
-                    } catch (MalformedURLException e) {
+                    } catch (IllegalArgumentException | MalformedURLException e) {
                         // If jndi-name is not an actual url, we might want to lookup the name
                     }
                 }
